# library

./: .cursorignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  ADDING_PACKAGES_AND_MODULES.md  AGENTS.md  PRD.md  README.md  RELEASE_WORKFLOW.md  build_info.dev.yaml  build_packages.py  cdf.toml  config.dev.yaml  conftest.py  pyproject.toml  pyrightconfig.json  release_packages.py  sop-cdf-project-setup.md  validate_packages.py
.cursor/: mcp.json
.cursor/plans/: extraction-scoped_aliasing_hierarchy.plan.md  isa_whitelist_validation_13a56478.plan.md  simplify_token_reassembly_migration.plan.md
.cursor/rules/: cdf-access-control-i18n.mdc  cdf-data-model-indexes.mdc  cdf-data-model-structure.mdc  cdf-direct-relations.mdc  cdf-discovery-aliasing-workflow-validation.mdc  cdf-discovery-governance-i18n.mdc  cdf-key-extraction-aliasing-workflow-validation.mdc  cdf-naming-conventions.mdc  cdf-transformations.mdc  key-extraction-aliasing-jonluca-static.mdc
.cursor/skills/cdf-discovery-aliasing-workflow-validation/: SKILL.md
.cursor/skills/cdf-key-extraction-aliasing-workflow-validation/: SKILL.md
.cursor/skills/cognite-data-modeling/: SKILL.md
.cursor/skills/cognite-dms-queries/: SKILL.md
.cursor_docs/plans/: 2026-01-19_ai-extractor-statestore-modes.md
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  renovate.json
.github/scripts/: prepare-fdp-project.sh
.github/workflows/: build-packages.yml  check-no-artifacts.yml  codeql.yml  deploy.yml  dry-run.yml  release-packages.yml  validate-packages.yml
deploy_logs_2026-05-28/: 2026-05-28T18_55_12.442880+00_00.json  2026-05-28T18_55_25.302632+00_00.json  2026-05-28T18_55_44.888504+00_00.json  2026-05-28T18_58_16.719455+00_00.json
docs/: JIRA_ACCEPTANCE.md
foundation-deployment-pack/: README.md  config.dev.yaml  config.prod.yaml  config.test.yaml
foundation-deployment-pack/scripts/: generate_env_configs.py
mixpanel/: README.md  module_lookup.csv
modules/: README.md  packages.toml
modules/accelerators/cdf_common/: README.md  module.toml
modules/accelerators/cdf_ingestion/: README.md  default.config.yaml  module.toml
modules/accelerators/cdm_maintain_quickstart/: README.md
modules/accelerators/contextualization/: BRANCH_COMPARISON_cdf_vs_jonluca.md  BRANCH_COMPARISON_cdf_vs_jonluca_CURRENT.md
modules/accelerators/ingestion/: module.toml
modules/accelerators/open_industrial_data_sync/: README.md  default.config.yaml  module.toml  test_oid_sync.py
modules/accelerators/quickstart/: README.md  module.toml
modules/atlas_ai/ai_extractor/: README.md  TESTING.md  default.config.yaml  hub_article.md  module.toml
modules/atlas_ai/ootb_agents/: README.md  default.config.yaml  module.toml
modules/atlas_ai/rca_with_rmdm/: DATA_PREREQUISITES.md  README.md  module.toml
modules/automated-tests/: cognite_sdk_config.yaml  helper.py  raw_data_source_testcase.py  run_tests.bat  run_tests.sh  test_compare_env_counts.py  test_discovery_and_subtest_example.py  test_file_extract_convert.py  test_metadata_for_some_site.py  test_object_counts.py  test_some_customer_site.py  test_transformations.py
modules/automated-tests/test-results/: test-results-2026-03-02.html
modules/bootcamp/: module.toml
modules/bootcamp/ice_cream_api/: module.toml
modules/cdf_performance_testing/: module.toml
modules/cdf_performance_testing/data_sets/: performance_testing.DataSet.yaml
modules/cdf_performance_testing/files/: cdf_config.CogniteFile.yaml  client_setup_utility.CogniteFile.yaml  data_modeling_notebook.CogniteFile.yaml  data_modeling_notebook.FileMetadata.yaml  files_notebook.CogniteFile.yaml  files_notebook.FileMetadata.yaml  performance_testing_files.CogniteFile.yaml  performance_utils_utility.CogniteFile.yaml  raw_notebook.CogniteFile.yaml  raw_notebook.FileMetadata.yaml  requirements.CogniteFile.yaml  setup_environment_script.CogniteFile.yaml  test_connection_script.CogniteFile.yaml  timeseries_ingestion_notebook.CogniteFile.yaml  timeseries_ingestion_notebook.FileMetadata.yaml  timeseries_query_notebook.CogniteFile.yaml  timeseries_query_notebook.FileMetadata.yaml  transformations_notebook.CogniteFile.yaml  transformations_notebook.FileMetadata.yaml
modules/cdf_sap_assets/: default.config.yaml
modules/common/cdf_auth_readwrite_all/: default.config.yaml  module.toml
modules/common/cdf_common/: README.md  default.config.yaml  module.toml
modules/common/cdf_foundation/: README.md  default.config.yaml  module.toml
modules/common/cdf_foundation_cicd/: README.md  module.toml
modules/common/cdf_ingestion/: README.md  default.config.yaml  module.toml
modules/common/cdf_ingestion_foundation/: README.md  default.config.yaml  module.toml
modules/common/cdf_project_foundation/: README.md  default.config.yaml  module.toml
modules/common/cdf_search/: README.md  default.config.yaml  module.toml
modules/contextualization/: key_extraction_aliasing
modules/contextualization/cdf_connection_sql/: README.md  default.config.yaml  module.toml
modules/custom/: README.md
modules/models/cfihos_oil_and_gas_extension/cfihos_model_config/: README.md  pyproject.toml
modules/models/cfihos_oil_and_gas_extension/cfihos_model_config/src/: cfihos.ipynb  cfihos.py  config.yaml  main.py
modules/models/cfihos_oil_and_gas_extension/cfihos_model_config/src/cfihos_utils/: container.py  filter.py  trimming.py
modules/tools/notebooks/cdf_transformation_jobs_metric_explorer/: COMMON_JSONL_FORMAT.md  README-SDK-patching.md  README-marimo-analysis.md  README-marimo-coding-best-practices.md  README.md  TEST_COVERAGE_ANALYSIS.md  marimo-initial-cursor-opus4.5-plan.md  marimo-tsjm-analysis-ng.py  marimo-tsjm-analysis.py  module.toml  pyproject.toml
modules/tools/notebooks/cdf_transformation_jobs_metric_explorer/auth/: notebook.cdf_metrics.Group.yaml
notebooks/CDF Performance Testing/: .gitignore  README.md
tests/: module_test_support.py  test_fdp_ci.py  test_foundation_cicd_generator.py  test_foundation_setup_wizard.py  test_module_test_support.py  test_validate_packages.py
(+5292 files in other folders)
