[project]
name = "cognite-library"
version = "0.0.0"
requires-python = ">=3.13"

[project.optional-dependencies]
test = [
    "cognite-sdk>=7,<8",
    "pydantic>=2",
    "psutil>=5.9",
    "pytest>=7",
    "python-dotenv>=1",
    "pyyaml>=6",
    "tenacity>=8",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",  # line too long — address per-file as needed
    "E701",  # multiple statements on one line (colon)
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/*.ipynb" = ["E741", "F401", "F402"]
"modules/sourcesystem/cdf_oid_sync/test_oid_sync.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
markers = [
    "integration: tests that call live external services (skipped without credentials)",
]
