# pyproject.toml for marimo TSJM Analysis notebook
#
# IMPORTANT: Keep dependencies in sync with inline script metadata in marimo-tsjm-analysis.py
# The inline deps (PEP 723) are used by: uvx marimo edit --sandbox marimo-tsjm-analysis.py
# This pyproject.toml is used by: uv run pytest marimo-tsjm-analysis.py
#
# Inline deps location: marimo-tsjm-analysis.py lines 1-10

[project]
name = "marimo-tsjm-analysis"
version = "0.1.0"
description = "Marimo notebook for TSJM (Transformation Job Metrics) analysis"
requires-python = ">=3.11"

# Keep in sync with marimo-tsjm-analysis.py inline dependencies!
dependencies = [
    "marimo",
    "polars>=1.0.0",
    "altair>=5.0.0,<6.0.0",
    "python-dotenv>=1.0.0",
    "cognite-toolkit>=0.7.46",
    "pyarrow>=18.0.0",
    "wigglystuff>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[dependency-groups]
# PEP 735 dependency groups (replaces deprecated tool.uv.dev-dependencies)
dev = [
    "pytest>=8.0.0",
]

